<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.remi.lxmetrostatus.MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/yellowLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/yellowLine"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/amarela" />

                <ImageView
                    android:id="@+id/amarelaStatusImage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    android:src="@drawable/check" />
            </RelativeLayout>

            <TextView
                android:id="@+id/yellowStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:text="@string/yellow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blueLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/blueLine"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/azul" />

                <ImageView
                    android:id="@+id/azulStatusImage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    android:src="@drawable/check" />
            </RelativeLayout>

            <TextView
                android:id="@+id/blueStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:text="@string/blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/greenLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/greenLine"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/verde" />

                <ImageView
                    android:id="@+id/verdeStatusImage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    android:src="@drawable/check" />
            </RelativeLayout>

            <TextView
                android:id="@+id/greenStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:text="@string/green" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/redLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/redLine"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/vermelha"
                   />

                <ImageView
                    android:id="@+id/vermelhaStatusImage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    android:src="@drawable/check" />
            </RelativeLayout>

            <TextView
                android:id="@+id/redStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:text="@string/red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="top|end"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_updated" />

            <TextView
                android:id="@+id/lastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="110sp" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="55sp"
        android:src="@android:drawable/stat_notify_sync"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="55sp"
        android:src="@android:drawable/ic_menu_mapmode"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4408939052892175/2345933374" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="42sp"
        android:layout_height="42sp"
        android:layout_gravity="center"
        android:visibility="invisible" />
</FrameLayout>

